[package]
name = "portage-repo"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
license = "MIT"
description = "Gentoo ebuild repository layout reader based on PMS"
repository = "https://github.com/lu-zero/portage-cli"
keywords = ["gentoo", "portage", "repository", "pms"]
categories = ["parser-implementations", "development-tools"]
# Unpublishable: depends on the brush fork via git. Release once brush is on crates.io.
publish = false

[features]
dhat-heap = ["dep:dhat"]
mimalloc = ["dep:mimalloc"]
lasso = ["portage-atom/lasso", "portage-metadata/lasso"]
symbol-table = ["portage-atom/symbol-table", "portage-metadata/symbol-table"]

[dependencies]
portage-atom = { workspace = true }
portage-metadata = { workspace = true }
portage-vdb = { workspace = true }
gentoo-core = { workspace = true }
# Pinned to a fork commit for reproducible CI (we don't commit Cargo.lock);
# bump when intentionally updating brush. Local dev overrides to a worktree
# via .cargo/config.toml.
brush-core = { workspace = true, features = ["experimental-parser"] }
brush-builtins = { workspace = true }
brush-parser = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
regex = { workspace = true }
thiserror = { workspace = true }
jwalk = { workspace = true }
flume = { workspace = true }
blake2 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
roxmltree = { workspace = true }
itertools = { workspace = true }
dhat = { workspace = true, optional = true }
mimalloc = { workspace = true, optional = true }
camino = { workspace = true }
papaya = { workspace = true }
md5 = { workspace = true }
winnow = { workspace = true, features = ["parser"] }
rustix = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
