[package]
name = "portage-resolve"
version = "0.0.1"
edition = "2024"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
license = "MIT"
description = "Resolution-policy and plan layer for Gentoo Portage dependency resolution (placeholder, not yet populated)"
readme = "README.md"
keywords = ["gentoo", "portage", "resolver", "dependency", "pms"]
rust-version.workspace = true
repository.workspace = true
categories = ["algorithms", "development-tools"]

[dependencies]
