[package]
name = "portage-resolve"
version = "0.0.1"
edition = "2024"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
license = "MIT"
description = "Resolution-policy and plan layer for Gentoo Portage dependency resolution (placeholder, not yet populated)"
readme = "README.md"
keywords = ["gentoo", "portage", "resolver", "dependency", "pms"]
rust-version.workspace = true
repository.workspace = true
categories = ["algorithms", "development-tools"]
# Unpublishable from this point on: depends on portage-repo, which pulls in
# the brush fork via git. v0.0.1 (published) is the last publishable version
# — it reserved the name while still empty; real content requires this.
publish = false

[dependencies]
camino = { workspace = true }
portage-atom-pubgrub = { workspace = true }
portage-repo = { workspace = true }
