[package]
name = "portage-vdb"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
license = "MIT"
description = "Gentoo Portage VDB (installed package database) reader"
repository = "https://github.com/lu-zero/portage-vdb"
keywords = ["gentoo", "portage", "vdb", "installed"]
categories = ["os::unix-apis", "development-tools"]

[dependencies]
portage-atom = "0.9"
portage-metadata = "0.7"
gentoo-core = "0.5"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
