[package]
name = "portage-vdb"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
license = "MIT"
description = "Gentoo Portage VDB (installed package database) reader"
repository = "https://github.com/lu-zero/portage-vdb"
keywords = ["gentoo", "portage", "vdb", "installed"]
categories = ["os::unix-apis", "development-tools"]

[dependencies]
portage-atom = { workspace = true }
portage-metadata = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "vdb"
harness = false
