[package]
name = "portage-vdb"
version = "0.1.0"
edition = "2024"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
license = "MIT"
description = "Gentoo Portage VDB (installed package database) reader"
readme = "README.md"
keywords = ["gentoo", "portage", "vdb", "installed"]
rust-version.workspace = true
repository.workspace = true
categories = ["os::unix-apis", "development-tools"]

[dependencies]
camino = { workspace = true }
portage-atom = { workspace = true }
portage-metadata = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "vdb"
harness = false
